<resources>
    <string name="app_name">Material Design App</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">Настройки</string>
    <string name="animations_rus">Анимации</string>
    <string name="recycler_view">Recycler View</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="pink_theme">Розовая тема</string>
    <string name="green_theme">Зеленая тема</string>
    <string name="choose_theme">Выберите тему для приложения</string>

    <string name="planets">Планеты</string>
    <string name="fade">Fade</string>
    <string name="animations">Animations</string>
    <string name="slide">Slide</string>
    <string name="explode">Explode</string>
    <string name="increase">Increase</string>
    <string name="trajectory_movement">Trajectory movement</string>
    <string name="shuffle_objects">Shuffle objects</string>
    <string name="object_animator">ObjectAnimator and View.animate</string>
    <string name="state_list_animator">StateListAnimator</string>
    <string name="constraint_layout_and_constraint_set">ConstraintLayout и ConstraintSet</string>
    <string name="additional_possibilities">Обзор дополнительных возможностей Material Design Components (MDC)</string>


    <string name="open_drawer_anim">open</string>
    <string name="close_drawer_anim">close</string>
    <string name="recyclerview">recyclerView</string>


    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="extra_text">Дополнительный текст</string>
    <string name="header">Заголовок</string>
    <string name="name_of_note">Название заметки</string>
    <string name="description_of_note">Дополнительный текст</string>


    <string name="cicero">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem
accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo
inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim
ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia
consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro
quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit,
sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam
aliquam quaerat voluptatem.</string>


</resources>