<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choose_theme_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_theme"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:fontFamily="@font/alata" />

        <RadioGroup
            android:id="@+id/radioGroup_themes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_light"
                android:text="@string/light_theme"
                style="@style/RadioButtonsWithThemes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_dark"
                android:text="@string/dark_theme"
                style="@style/RadioButtonsWithThemes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_pink"
                android:text="@string/pink_theme"
                style="@style/RadioButtonsWithThemes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_green"
                android:text="@string/green_theme"
                style="@style/RadioButtonsWithThemes" />

        </RadioGroup>


    </LinearLayout>
</ScrollView>